<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- titles -->
    <string name="app_name">Wooooo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_master">MasterActivity</string>
    <string name="title_activity_begin">BeginActivity</string>
    <string name="title_activity_slave">SlaveActivity</string>

    <!-- Share preference String -->
    <string name="login_data_preference">LOGIN_DATA_PREFERENCE</string>
    <string name="login_username">USERNAME</string>
    <string name="login_password">PASSWORD</string>
    <string name="login_isPassSaved">IS_PASS_SAVED</string>
    <string name="login_partnerName">PARTNERNAME</string>

    <!-- Component names -->
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="partner">Partner Name</string>
    <string name="checkbox_save_pass">save password</string>
    <string name="button_login">Log In</string>
    <string name="button_salve">I\'m coming ...</string>
    <string name="button_master">... I\'m waiting</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dialog_location_title">Tips for Location Service</string>
    <string name="dialog_location_ok">OK</string>
    <string name="dialog_location_cancel">Cancel</string>
    <string name="button_master_call">Where are you</string>

    <!-- Messages -->
    <string name="slave_background_text">I\'m watching you!</string>
    <string name="login_error_user">The user name or password is wrong, please try again</string>
    <string name="login_error_user_empty">The user name should not be empty</string>
    <string name="login_error_network">Internet connection failed. Please check your network setting</string>
    <string name="login_error_XMPP">Can\'t connect to XMPP server. Please try again later</string>
    <string name="dialog_warning_location">Please activate your location service to get a better resolution for your location</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test_map">TestMapActivity</string>
    <string name="master_master_position_title">I\'m here</string>
    <string name="master_slave_position_title">She is there</string>

    <!-- Google API key -->
    <string name="Google_API_Key_win">AIzaSyAWPyrtIPjMf7-EH-Z9UEdg5OiFU2knSX4</string>
    <string name="Google_API_Key_linux">AIzaSyCfjbhSBuIjjEFQfYum8cbWXh5ZzH8UBnc</string>
    <string name="Google_API_Key_linux_Release">AIzaSyCesnALAw9NyjD8QxFa5ArRDrl8nG5VFYM</string>

</resources>
