<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cibobo.wooooo.activities.LoginActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:textColor="@color/blue"/>

    <EditText
        android:layout_width="@dimen/login_editText_width"
        android:layout_height="@dimen/login_editText_height"
        android:id="@+id/editTextUserName"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:inputType="textShortMessage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/textView2"
        android:layout_below="@+id/editTextUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/blue"/>

    <EditText
        android:layout_width="@dimen/login_editText_width"
        android:layout_height="@dimen/login_editText_height"
        android:id="@+id/editTextPassword"
        android:inputType="textPassword"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />


    <CheckBox
        android:layout_width="@dimen/login_editText_width"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_save_pass"
        android:ems="9"
        android:id="@+id/checkBoxSavePass"
        android:layout_alignLeft="@+id/editTextPassword"
        android:layout_alignStart="@+id/editTextPassword"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/partner"
        android:id="@+id/textView3"
        android:layout_below="@+id/checkBoxSavePass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/blue"/>

    <EditText
        android:layout_width="@dimen/login_editText_width"
        android:layout_height="@dimen/login_editText_height"
        android:id="@+id/editTextPartnerName"
        android:inputType="textShortMessage"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />


    <Button
        android:layout_width="@dimen/login_editText_width"
        android:layout_height="@dimen/login_editText_height"
        android:text="@string/button_login"
        android:id="@+id/buttonLogin"
        android:layout_below="@id/editTextPartnerName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_selector"/>

</RelativeLayout>
